Use file in project

--- a/Warehousing/Warehousing.csproj
+++ b/Warehousing/Warehousing.csproj
@@ -16,7 +16,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BaseBackend\BaseBackend.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\categoriesFile.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\unitsFile.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
