--- a/Warehousing/Warehousing.csproj
+++ b/Warehousing/Warehousing.csproj
@@ -27,6 +27,9 @@
     <None Update="Data\categoriesFile.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\loginFile.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Data\unitsFile.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
